stoat/tests/snapshots/snapshots/snapshots__lsp__after-next-no-diag.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal flash="No diagnostics"
  1:|clean code
