stoat/tests/snapshots/snapshots/snapshots__lsp__at-end.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:aaa
  2:bbb
  3:ccc
  4:ddd
  5:eee|
