stoat/tests/snapshots/snapshots/snapshots__lsp__before.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:|clean code
