stoat/tests/snapshots/snapshots/snapshots__lsp__edit-current-file.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:|alpha LINE_1
  2:alpha line 2
  3:alpha line 3 modified
  4:alpha line 4
  5:alpha line 5
  6:alpha line 6
  7:alpha line 7
  8:alpha line 8
  9:alpha line 9
 10:alpha line 10
