stoat/tests/snapshots/snapshots/snapshots__lsp__picker-after-select.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:fn main() {
  2:    println!("hello");
  3:}
  4:|struct Config {
  5:    name: String,
  6:}
