stoat/tests/snapshots/snapshots/snapshots__lsp__picker-empty.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal flash="No symbols found"
  1:|fn main() {}
